[project]
name = "data-designer-cache-llm-column"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jmarcos", email = "jmarcosdo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "data-designer",
    "pandas",
    "pydantic"
]

[project.entry-points."data_designer.plugins"]
data_designer_cache_llm_column = "data_designer_cache_llm_column.plugin:plugin"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
