[project]
name = "data-designer-cache-llm-column"
version = "0.1.0"
description = "Data Designer plugin adding cache-enabled LLM text and structured column generators"
readme = "README.md"
authors = [
    { name = "jmarcos", email = "jmarcosdo@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "data-designer",
    "duckdb",
    "pandas",
    "pydantic"
]

[project.entry-points."data_designer.plugins"]
data_designer_cache_llm_text_column = "data_designer_cache_llm_column.cache_llm_text_column.plugin:plugin"
data_designer_cache_llm_structured_column = "data_designer_cache_llm_column.cache_llm_structured_column.plugin:plugin"
data_designer_cache_llm_code_column = "data_designer_cache_llm_column.cache_llm_code_column.plugin:plugin"
data_designer_cache_llm_judge_column = "data_designer_cache_llm_column.cache_llm_judge_column.plugin:plugin"

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"
